// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivationDropdown render 0/2 completed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        aria-controls="menu--5"
        aria-haspopup="true"
        class="activation-dropdown-button activation-dropdown-button__animated-button bg-transparent align-items-center e2e-activation-nav-item-toggle activation-dropdown-button--hidden"
        data-reach-menu-button=""
        id="menu-button--menu--5"
        type="button"
      >
        <div
          class="activation-dropdown-button__confetti"
        >
          <div
            style="position: relative;"
          />
        </div>
        Get started
        <div
          class="activation-dropdown-button__confetti"
        >
          <div
            style="position: relative;"
          />
        </div>
        <span
          class="activation-dropdown-button__progress-bar-container"
        >
          <svg
            class="CircularProgressbar activation-dropdown-button__circular-progress-bar"
            data-test-id="CircularProgressbar"
            viewBox="0 0 100 100"
          >
            <path
              class="CircularProgressbar-trail"
              d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
              fill-opacity="0"
              stroke-width="12"
              style="stroke-dasharray: 276.46015351590177px 276.46015351590177px; stroke-dashoffset: 0px;"
            />
            <path
              class="CircularProgressbar-path"
              d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
              fill-opacity="0"
              stroke-width="12"
              style="stroke-dasharray: 276.46015351590177px 276.46015351590177px; stroke-dashoffset: NaNpx;"
            />
          </svg>
        </span>
      </button>
    </div>
    <reach-portal>
      <div
        data-reach-menu=""
        data-reach-menu-popover=""
        data-reach-popover=""
        hidden=""
        style="position: absolute; left: 0px; top: 0px;"
      />
    </reach-portal>
    <reach-portal>
      <div
        data-reach-menu=""
        data-reach-menu-popover=""
        data-reach-popover=""
        hidden=""
        style="position: absolute; left: 0px; top: 0px;"
      >
        <div
          aria-labelledby="menu-button--menu--5"
          class="activation-dropdown"
          data-reach-menu-items=""
          data-reach-menu-list=""
          id="menu--5"
          role="menu"
          tabindex="-1"
        >
          <div
            class="dropdown-item-text activation-dropdown-header"
          >
            <h3
              class="mb-2"
            >
              Welcome to Sourcegraph!
            </h3>
            <p
              class="mb-2"
            >
              Complete the steps below to finish onboarding!
            </p>
          </div>
          <div
            class="activation-dropdown__list"
            data-reach-accordion=""
          >
            <div>
              <div
                data-reach-accordion-item=""
                data-state="collapsed"
              >
                <button
                  aria-controls="panel--7--0"
                  aria-expanded="false"
                  class="activation-dropdown-item dropdown-item"
                  data-reach-accordion-button=""
                  id="button--7--0"
                >
                  <div
                    class="activation-checklist-item d-flex justify-content-between activation-checklist-item--dropdown"
                  >
                    <div>
                      <span
                        class="activation-checklist-item__icon icon-inline icon-down"
                      >
                        <svg
                          class="mdi-icon "
                          fill="currentColor"
                          height="24"
                          viewBox="0 0 24 24"
                          width="24"
                        >
                          <path
                            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="activation-checklist-item__icon icon-inline icon-right"
                      >
                        <svg
                          class="mdi-icon "
                          fill="currentColor"
                          height="24"
                          viewBox="0 0 24 24"
                          width="24"
                        >
                          <path
                            d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="activation-checklist__title"
                      >
                        title1
                      </span>
                    </div>
                    <div>
                      <svg
                        class="mdi-icon icon-inline text-muted"
                        fill="currentColor"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    aria-labelledby="button--7--0"
                    class="px-2"
                    data-reach-accordion-panel=""
                    data-state="collapsed"
                    hidden=""
                    id="panel--7--0"
                    role="region"
                    tabindex="-1"
                  >
                    <div
                      class="activation-dropdown-item__detail pb-1"
                    >
                      detail1
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div>
              <div
                data-reach-accordion-item=""
                data-state="collapsed"
              >
                <button
                  aria-controls="panel--7--1"
                  aria-expanded="false"
                  class="activation-dropdown-item dropdown-item"
                  data-reach-accordion-button=""
                  id="button--7--1"
                >
                  <div
                    class="activation-checklist-item d-flex justify-content-between activation-checklist-item--dropdown"
                  >
                    <div>
                      <span
                        class="activation-checklist-item__icon icon-inline icon-down"
                      >
                        <svg
                          class="mdi-icon "
                          fill="currentColor"
                          height="24"
                          viewBox="0 0 24 24"
                          width="24"
                        >
                          <path
                            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="activation-checklist-item__icon icon-inline icon-right"
                      >
                        <svg
                          class="mdi-icon "
                          fill="currentColor"
                          height="24"
                          viewBox="0 0 24 24"
                          width="24"
                        >
                          <path
                            d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="activation-checklist__title"
                      >
                        title2
                      </span>
                    </div>
                    <div>
                      <svg
                        class="mdi-icon icon-inline text-muted"
                        fill="currentColor"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    aria-labelledby="button--7--1"
                    class="px-2"
                    data-reach-accordion-panel=""
                    data-state="collapsed"
                    hidden=""
                    id="panel--7--1"
                    role="region"
                    tabindex="-1"
                  >
                    <div
                      class="activation-dropdown-item__detail pb-1"
                    >
                      detail2
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </reach-portal>
  </body>,
  "container": <div>
    <button
      aria-controls="menu--5"
      aria-haspopup="true"
      class="activation-dropdown-button activation-dropdown-button__animated-button bg-transparent align-items-center e2e-activation-nav-item-toggle activation-dropdown-button--hidden"
      data-reach-menu-button=""
      id="menu-button--menu--5"
      type="button"
    >
      <div
        class="activation-dropdown-button__confetti"
      >
        <div
          style="position: relative;"
        />
      </div>
      Get started
      <div
        class="activation-dropdown-button__confetti"
      >
        <div
          style="position: relative;"
        />
      </div>
      <span
        class="activation-dropdown-button__progress-bar-container"
      >
        <svg
          class="CircularProgressbar activation-dropdown-button__circular-progress-bar"
          data-test-id="CircularProgressbar"
          viewBox="0 0 100 100"
        >
          <path
            class="CircularProgressbar-trail"
            d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
            fill-opacity="0"
            stroke-width="12"
            style="stroke-dasharray: 276.46015351590177px 276.46015351590177px; stroke-dashoffset: 0px;"
          />
          <path
            class="CircularProgressbar-path"
            d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
            fill-opacity="0"
            stroke-width="12"
            style="stroke-dasharray: 276.46015351590177px 276.46015351590177px; stroke-dashoffset: NaNpx;"
          />
        </svg>
      </span>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ActivationDropdown render 1/2 completed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        aria-controls="menu--9"
        aria-haspopup="true"
        class="activation-dropdown-button activation-dropdown-button__animated-button bg-transparent align-items-center e2e-activation-nav-item-toggle activation-dropdown-button--hidden"
        data-reach-menu-button=""
        id="menu-button--menu--9"
        type="button"
      >
        <div
          class="activation-dropdown-button__confetti"
        >
          <div
            style="position: relative;"
          />
        </div>
        Get started
        <div
          class="activation-dropdown-button__confetti"
        >
          <div
            style="position: relative;"
          />
        </div>
        <span
          class="activation-dropdown-button__progress-bar-container"
        >
          <svg
            class="CircularProgressbar activation-dropdown-button__circular-progress-bar"
            data-test-id="CircularProgressbar"
            viewBox="0 0 100 100"
          >
            <path
              class="CircularProgressbar-trail"
              d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
              fill-opacity="0"
              stroke-width="12"
              style="stroke-dasharray: 276.46015351590177px 276.46015351590177px; stroke-dashoffset: 0px;"
            />
            <path
              class="CircularProgressbar-path"
              d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
              fill-opacity="0"
              stroke-width="12"
              style="stroke-dasharray: 276.46015351590177px 276.46015351590177px; stroke-dashoffset: 0px;"
            />
          </svg>
        </span>
      </button>
    </div>
    <reach-portal>
      <div
        data-reach-menu=""
        data-reach-menu-popover=""
        data-reach-popover=""
        hidden=""
        style="position: absolute; left: 0px; top: 0px;"
      />
    </reach-portal>
    <reach-portal>
      <div
        data-reach-menu=""
        data-reach-menu-popover=""
        data-reach-popover=""
        hidden=""
        style="position: absolute; left: 0px; top: 0px;"
      >
        <div
          aria-labelledby="menu-button--menu--9"
          class="activation-dropdown"
          data-reach-menu-items=""
          data-reach-menu-list=""
          id="menu--9"
          role="menu"
          tabindex="-1"
        >
          <div
            class="dropdown-item-text activation-dropdown-header"
          >
            <h3
              class="mb-2"
            >
              Almost there!
            </h3>
            <p
              class="mb-2"
            >
              Complete the steps below to finish onboarding!
            </p>
          </div>
          <div
            class="activation-dropdown__list"
            data-reach-accordion=""
          >
            <div>
              <div
                data-reach-accordion-item=""
                data-state="collapsed"
              >
                <button
                  aria-controls="panel--11--0"
                  aria-expanded="false"
                  class="activation-dropdown-item dropdown-item"
                  data-reach-accordion-button=""
                  id="button--11--0"
                >
                  <div
                    class="activation-checklist-item d-flex justify-content-between activation-checklist-item--dropdown"
                  >
                    <div>
                      <span
                        class="activation-checklist-item__icon icon-inline icon-down"
                      >
                        <svg
                          class="mdi-icon "
                          fill="currentColor"
                          height="24"
                          viewBox="0 0 24 24"
                          width="24"
                        >
                          <path
                            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="activation-checklist-item__icon icon-inline icon-right"
                      >
                        <svg
                          class="mdi-icon "
                          fill="currentColor"
                          height="24"
                          viewBox="0 0 24 24"
                          width="24"
                        >
                          <path
                            d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="activation-checklist__title"
                      >
                        title1
                      </span>
                    </div>
                    <div>
                      <svg
                        class="mdi-icon icon-inline text-success"
                        fill="currentColor"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          d="M12 2C6.5 2 2 6.5 2 12S6.5 22 12 22 22 17.5 22 12 17.5 2 12 2M10 17L5 12L6.41 10.59L10 14.17L17.59 6.58L19 8L10 17Z"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    aria-labelledby="button--11--0"
                    class="px-2"
                    data-reach-accordion-panel=""
                    data-state="collapsed"
                    hidden=""
                    id="panel--11--0"
                    role="region"
                    tabindex="-1"
                  >
                    <div
                      class="activation-dropdown-item__detail pb-1"
                    >
                      detail1
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div>
              <div
                data-reach-accordion-item=""
                data-state="collapsed"
              >
                <button
                  aria-controls="panel--11--1"
                  aria-expanded="false"
                  class="activation-dropdown-item dropdown-item"
                  data-reach-accordion-button=""
                  id="button--11--1"
                >
                  <div
                    class="activation-checklist-item d-flex justify-content-between activation-checklist-item--dropdown"
                  >
                    <div>
                      <span
                        class="activation-checklist-item__icon icon-inline icon-down"
                      >
                        <svg
                          class="mdi-icon "
                          fill="currentColor"
                          height="24"
                          viewBox="0 0 24 24"
                          width="24"
                        >
                          <path
                            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="activation-checklist-item__icon icon-inline icon-right"
                      >
                        <svg
                          class="mdi-icon "
                          fill="currentColor"
                          height="24"
                          viewBox="0 0 24 24"
                          width="24"
                        >
                          <path
                            d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="activation-checklist__title"
                      >
                        title2
                      </span>
                    </div>
                    <div>
                      <svg
                        class="mdi-icon icon-inline text-muted"
                        fill="currentColor"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    aria-labelledby="button--11--1"
                    class="px-2"
                    data-reach-accordion-panel=""
                    data-state="collapsed"
                    hidden=""
                    id="panel--11--1"
                    role="region"
                    tabindex="-1"
                  >
                    <div
                      class="activation-dropdown-item__detail pb-1"
                    >
                      detail2
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </reach-portal>
  </body>,
  "container": <div>
    <button
      aria-controls="menu--9"
      aria-haspopup="true"
      class="activation-dropdown-button activation-dropdown-button__animated-button bg-transparent align-items-center e2e-activation-nav-item-toggle activation-dropdown-button--hidden"
      data-reach-menu-button=""
      id="menu-button--menu--9"
      type="button"
    >
      <div
        class="activation-dropdown-button__confetti"
      >
        <div
          style="position: relative;"
        />
      </div>
      Get started
      <div
        class="activation-dropdown-button__confetti"
      >
        <div
          style="position: relative;"
        />
      </div>
      <span
        class="activation-dropdown-button__progress-bar-container"
      >
        <svg
          class="CircularProgressbar activation-dropdown-button__circular-progress-bar"
          data-test-id="CircularProgressbar"
          viewBox="0 0 100 100"
        >
          <path
            class="CircularProgressbar-trail"
            d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
            fill-opacity="0"
            stroke-width="12"
            style="stroke-dasharray: 276.46015351590177px 276.46015351590177px; stroke-dashoffset: 0px;"
          />
          <path
            class="CircularProgressbar-path"
            d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
            fill-opacity="0"
            stroke-width="12"
            style="stroke-dasharray: 276.46015351590177px 276.46015351590177px; stroke-dashoffset: 0px;"
          />
        </svg>
      </span>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ActivationDropdown render loading 1`] = `
<div>
  <button
    aria-controls="menu--1"
    aria-haspopup="true"
    class="activation-dropdown-button activation-dropdown-button__animated-button bg-transparent align-items-center e2e-activation-nav-item-toggle activation-dropdown-button--hidden"
    data-reach-menu-button=""
    id="menu-button--menu--1"
    type="button"
  >
    <div
      class="activation-dropdown-button__confetti"
    >
      <div
        style="position: relative;"
      />
    </div>
    Get started
    <div
      class="activation-dropdown-button__confetti"
    >
      <div
        style="position: relative;"
      />
    </div>
    <span
      class="activation-dropdown-button__progress-bar-container"
    >
      <svg
        class="CircularProgressbar activation-dropdown-button__circular-progress-bar"
        data-test-id="CircularProgressbar"
        viewBox="0 0 100 100"
      >
        <path
          class="CircularProgressbar-trail"
          d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
          fill-opacity="0"
          stroke-width="12"
          style="stroke-dasharray: 276.46015351590177px 276.46015351590177px; stroke-dashoffset: 0px;"
        />
        <path
          class="CircularProgressbar-path"
          d="
      M 50,50
      m 0,-44
      a 44,44 0 1 1 0,88
      a 44,44 0 1 1 0,-88
    "
          fill-opacity="0"
          stroke-width="12"
          style="stroke-dasharray: 276.46015351590177px 276.46015351590177px; stroke-dashoffset: 276.46015351590177px;"
        />
      </svg>
    </span>
  </button>
</div>
`;
